updated setcolor method.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -111,7 +111,7 @@
                 <a id='button' href="javascript:void(0)" onclick="GET_rainbow();">Rainbow</a>
             </div>
             <div>
-                <a id='button' href="javascript:void(0)" onclick="GET_chaseRainbow();">Chase the Rainbow</a>
+                <a id='button' href="javascript:void(0)" onclick="GET_chaseRainbow();">Chase The Rainbow</a>
             </div>
         </div>
         
