--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -61,6 +61,11 @@
                 let parsedUrl = fullUrl.split('/',3).join('/');
                 fetch(`${parsedUrl}/device/chaseRainbow`);
             }
+            function GET_candyCane() {
+                let fullUrl = window.location.href;
+                let parsedUrl = fullUrl.split('/',3).join('/');
+                fetch(`${parsedUrl}/device/candyCane`);
+            }
 
 
             function POST_set_color() {
@@ -112,6 +117,9 @@
             </div>
             <div>
                 <a id='button' href="javascript:void(0)" onclick="GET_chaseRainbow();">Chase The Rainbow</a>
+            </div>
+            <div>
+                <a id='button' href="javascript:void(0)" onclick="GET_candyCane();">Candy Cane!</a>
             </div>
         </div>
         
